# trafficpi

./: CMakeLists.txt  configure.sh  main.cpp
classifier/: cascade.xml  hogcars2.xml  lbpcars3.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
